--- a/libft/Makefile
+++ b/libft/Makefile
@@ -4,7 +4,7 @@ CC			=	gcc
 
 CFLAGS		=	-Wall -Wextra -Werror -D BUFFER_SIZE=1024
 
-SRCS		=	ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_calloc.c ft_memchr.c ft_memcmp.c ft_strlen.c ft_strdup.c ft_strlcat.c ft_strlcpy.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_tolower.c ft_toupper.c ft_isprint.c ft_substr.c ft_strndup.c ft_strmapi.c ft_strjoin.c ft_strcat.c ft_strtrim.c ft_split.c ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_isspace.c ft_atoi_base.c ft_indexof.c ft_putchar.c ft_putstr.c ft_itoa_base.c ft_puts.c ft_starts_with.c ft_ends_with.c ft_strmerge.c ft_strcpy.c ft_putnbr.c ft_contains.c get_next_line.c get_next_line_utils.c ft_split_utils.c rad.c ft_strcmp.c swap.c abs.c
+SRCS		=	ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_calloc.c ft_memchr.c ft_memcmp.c ft_strlen.c ft_strdup.c ft_strlcat.c ft_strlcpy.c ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_tolower.c ft_toupper.c ft_isprint.c ft_substr.c ft_strndup.c ft_strmapi.c ft_strjoin.c ft_strcat.c ft_strtrim.c ft_split.c ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_isspace.c ft_atoi_base.c ft_indexof.c ft_putchar.c ft_putstr.c ft_itoa_base.c ft_puts.c ft_starts_with.c ft_ends_with.c ft_strmerge.c ft_strcpy.c ft_putnbr.c ft_contains.c get_next_line.c get_next_line_utils.c ft_split_utils.c rad.c ft_strcmp.c swap.c abs.c ft_atoul.c
 
 OBJS    	=   $(SRCS:.c=.o)
 
